--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
   background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url(https://cutewallpaper.org/22/animes-crossover-4k-wallpapers/46344591.jpg);
 
   /* background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://cutewallpaper.org/22/animes-crossover-4k-wallpapers/46344591.jpg); */
-  background-position: left 70% top 5%;
+  background-position: left 65% top 5%;
   background-attachment: fixed;
 }
 
@@ -60,13 +60,16 @@ input {
 }
 
 .search {
-  margin-top: 6rem;
+  margin-top: 7rem;
   text-shadow: 2px 3px #233f57;
 }
 
 .searchBar {
   width: 20rem;
   height: 2rem;
+  font-size: 1.4rem;
+  padding-left: 0.5rem;
+  font-family: 'Open Sans', sans-serif;
   border-right: none;
   border: none;
   box-shadow: 0 8px 8px -4px rgba(0, 0, 0, 0.5);
@@ -94,7 +97,7 @@ input {
   justify-content: end;
 }
 
-.search-btn > i {
+.search-btn i {
   font-size: large;
 }
 
@@ -153,7 +156,6 @@ input {
   padding: 0.5rem;
   margin-left: 0.5rem;
   width: 60%;
-  height: 100%;
   background-color: rgba(102, 123, 142, 0.7);
   border-radius: 5px;
 }
